--- a/textureFetcher.csproj
+++ b/textureFetcher.csproj
@@ -17,7 +17,11 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
     <PackageReference Include="CsvHelper" Version="32.0.3" />
+    <PackageReference Include="Fastenshtein" Version="1.0.0.9" />
     <PackageReference Include="Live.Avalonia" Version="1.4.1" />
+    <PackageReference Include="Lucene.Net" Version="4.8.0-beta00016" />
+    <PackageReference Include="Lucene.Net.Analysis.Common" Version="4.8.0-beta00016" />
+    <PackageReference Include="Lucene.Net.QueryParser" Version="4.8.0-beta00016" />
     <PackageReference Include="NetVips" Version="2.4.1" />
     <PackageReference Include="NetVips.Native" Version="8.15.2" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
