--- a/src/TextureFetcher/textureFetcher.csproj
+++ b/src/TextureFetcher/textureFetcher.csproj
@@ -18,6 +18,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="CsvHelper" Version="32.0.3" />
+    <PackageReference Include="Dock.Avalonia" Version="11.0.10" />
     <PackageReference Include="Fastenshtein" Version="1.0.0.9" />
     <PackageReference Include="Live.Avalonia" Version="1.4.1" />
     <PackageReference Include="Lucene.Net" Version="4.8.0-beta00016" />
@@ -27,7 +28,9 @@
     <PackageReference Include="NetVips.Extensions" Version="2.3.0" />
     <PackageReference Include="NetVips.Native" Version="8.15.2" />
     <PackageReference Include="Serilog" Version="4.0.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+    <PackageReference Include="Serilog.Expressions" Version="4.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.InMemory" Version="0.11.0" />
     <PackageReference Include="SerilogTraceListener" Version="3.2.1-dev-00011" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
