--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,12 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# Docfx result
+_site/
+
+
 # Visual Studio 2015/2017 cache/options directory
+
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
