--- a/src/TextureFetcher/textureFetcher.csproj
+++ b/src/TextureFetcher/textureFetcher.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ActiproSoftware.Controls.Avalonia" Version="24.1.0" />
+    <PackageReference Include="ActiproSoftware.Controls.Avalonia.Themes.DataGrid" Version="24.1.0" />
     <PackageReference Include="Avalonia" Version="11.0.10" />
     <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.10" />
     <PackageReference Include="Avalonia.Desktop" Version="11.0.10" />
@@ -19,19 +21,30 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="CsvHelper" Version="32.0.3" />
     <PackageReference Include="Dock.Avalonia" Version="11.0.10" />
+    <PackageReference Include="Dock.Model" Version="11.0.10" />
+    <PackageReference Include="Dock.Model.Mvvm" Version="11.0.10" />
     <PackageReference Include="Fastenshtein" Version="1.0.0.9" />
     <PackageReference Include="Live.Avalonia" Version="1.4.1" />
     <PackageReference Include="Lucene.Net" Version="4.8.0-beta00016" />
     <PackageReference Include="Lucene.Net.Analysis.Common" Version="4.8.0-beta00016" />
     <PackageReference Include="Lucene.Net.QueryParser" Version="4.8.0-beta00016" />
+    <PackageReference Include="Material.Avalonia" Version="3.6.0" />
     <PackageReference Include="NetVips" Version="2.4.1" />
     <PackageReference Include="NetVips.Extensions" Version="2.3.0" />
     <PackageReference Include="NetVips.Native" Version="8.15.2" />
+    <PackageReference Include="Semi.Avalonia" Version="11.0.7" />
+    <PackageReference Include="Semi.Avalonia.ColorPicker" Version="11.0.7" />
+    <PackageReference Include="Semi.Avalonia.DataGrid" Version="11.0.7" />
     <PackageReference Include="Serilog" Version="4.0.0" />
     <PackageReference Include="Serilog.Expressions" Version="4.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.InMemory" Version="0.11.0" />
     <PackageReference Include="SerilogTraceListener" Version="3.2.1-dev-00011" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Avalonia.Markup.Declarative\src\Avalonia.Markup.Declarative\Avalonia.Markup.Declarative.csproj" />
   </ItemGroup>
 </Project>
